test/fail_compilation/fail349.d

int f()     { return 1; }
int f(int n){ return 2; }

auto testf()
{
	return &f;
}

void main()
{
	auto t = testf();
}
